--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,7 +32,7 @@
 </div>
   
       <div class="d-flex flex-column flex-sm-row justify-content-center pt-2 mb-1 border-top">
-        <p>© 2022 All rights reserved | Designed and coded by John Dormont</p>
+        <p>© 2022 All rights reserved | Designed and coded by SONURAJ</p>
         
 
       </div>
