--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,24 +1,6 @@
-<!-- <div>
-    <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-4">John Dormont</span>
-      </a>
-
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]={exact:true} class="nav-link">Home</a></li>
-        <li class="nav-item"><a routerLink="/about" routerLinkActive="active" class="nav-link">About me</a></li>
-        <li class="nav-item"><a routerLink="/works" routerLinkActive="active" class="nav-link">My works</a></li>
-        <li class="nav-item"><a routerLink="/pricing" routerLinkActive="active" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a routerLink="/contact" routerLinkActive="active" class="nav-link">Contact me</a></li>
-      </ul>
-    </header>
-  </div> -->
-
-
-  <nav class="navbar navbar-dark fixed-top navbar-expand-sm py-4 border-bottom" style="background-color:#010230 ;">
+<nav class="navbar navbar-dark fixed-top navbar-expand-sm py-4 border-bottom" style="background-color:#010230 ;">
     <div class="container">
-      <a class="navbar-brand text-decoration-none text-white" routerLink="/">John Dormont</a>
+      <a class="navbar-brand text-decoration-none text-white" routerLink="/">SONURAJ</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
