--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <!-- landing page start -->
 <div class="hero-image border-bottom">
     <div class="hero-text">
-      <h1 style="font-size:50px">Hi! I am John Dormont</h1>
+      <h1 style="font-size:50px">Hi! I am SONURAJ</h1>
         <h3>I'm a Full stack developer</h3>
         <br>
         <button class="btn btn-info btn-hire">Hire me</button>
